# drtsans

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  OnboardingChecklist.rst  README.md  README.rst  README_developer.rst  cg2_meta_test.py  conda-setup.sh  docker-compose.yml  drtsans-dev.yml  env.base  environment.yml  lilin_ptma.py  logs.txt  miniconda-dl.sh  pydantic-notes.md  pyproject.toml  pytest.ini  requirements.txt  requirements_2.x.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  test_job.sh  versioneer.py
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: defect.md  task.md
.github/workflows/: package.yml  test.yml  test_and_deploy.yml  update-lockfile.yml
.gitlab/issue_templates/: capability.md  corelli_task_milestone_09_14.md  defect.md  enabler.md  story.md  task.md
.gitlab/merge_request_templates/: default.md
Milestones/: Milestones.md  Milestones_ric.md
conda-recipe/: meta.yaml
conda.recipe/: meta.yaml
data/: README.md
data/biosans/: BioSANS_exp402_scan0006_0001.xml
dockerfiles/: Dockerfile.kickstart
docs/: conf.py  index.rst  release_notes.rst
docs/developer/: index.rst
docs/drtsans/: chopper.rst  dataobjects.rst  drtsans.rst  drtsans.tof.eqsans.rst  example_1d.py  index.rst  pixel_calibration.rst  plots.rst  reduction_parameters.rst  reduction_scripts.rst  resolution.rst  stitch.rst  wavelength.rst
docs/user/: autoreduction.rst  binning.rst  calibration.rst  polarization.rst  reduction_output.rst  slicing.rst
documents/: mono_sample_det_pos.pptx
drtsans/: __init__.py  _version.py  absolute_units.py  api.py  auto_wedge.py  barscan.py  beam_finder.py  chopper.py  convert_to_q.py  dark_current.py  dataobjects.py  detector.py  determine_bins.py  frame_mode.py  generate_event_nexus.py  geometry.py  h5_buffer.py  instruments.py  integrate_roi.py  iq.py  load.py  mask_utils.py  meta_data.py  momentum_transfer.py  momentum_transfer_factory.py  path.py  pixel_calibration.py  prepare_sensivities_correction.py  process_uncertainties.py  redparms.py  reductionlog.py  resolution.py  samplelogs.py  save_ascii.py  savereductionlog.py  script_utility.py  sensitivity.py  sensitivity_correction_moving_detectors.py  sensitivity_correction_patch.py  sensitivity_correction_patch_legacy.py  (+9 more)
drtsans/files/: __init__.py  event_nexus_nodes.py  event_nexus_rw.py  hdf5_rw.py  log_h5_reader.py
drtsans/hfir/: barscan.py  dark_current.py  iq.py  momentum_transfer.py  normalisation.py
drtsans/mono/: __init__.py  absolute_units.py  bar_scan_pixel_calibration.py  barscan.py  convert_to_q.py  convert_xml_to_nexus.py  dark_current.py  generate_event_nexus.py  geometry.py  iq.py  load.py  meta_data.py  momentum_transfer.py  normalisation.py  normalization.py  spice_data.py  spice_xml_parser.py  transmission.py  wedge.py
drtsans/plots/: api.py
notebooks/barscan/: barscan.ipynb  biosans_barscan.ipynb  biosans_midrange_detector_barscan.ipynb  biosans_pixel_calibration_22487_with_midrange.ipynb  biosans_wing_detector_barscan.ipynb
notebooks/biosans/: biosans_multi.ipynb  biosans_pixel_calibration.ipynb  biosans_pixel_calibration_5767.ipynb  biosans_pixel_calibration_5767_with_midrange.ipynb  biosans_pixel_calibration_838.ipynb  biosans_pixel_calibration_838_midrange.ipynb
notebooks/gpsans/: gpsans_pixel_calibration.ipynb  gpsans_pixel_calibration_9905.ipynb  gpsans_pixel_calibration_copy.ipynb  gpsans_reduction_1config.ipynb  gpsans_simplified_pixel_calibration.ipynb  pixel_calibration.ipynb
notebooks/tubewidth/: gpsans_tubewidth.ipynb
ornl/: _version.py  path.py  settings.py
ornl/sans/: __init__.py  chopper.py  core_utils.py  dark_current.py  detector.py  geometry.py  iq.py  mask_utils.py  momentum_transfer.py  process_uncertainties.py  resolution.py  samplelogs.py  save_2d.py  save_ascii.py  savereductionlog.py  sensitivity.py  solid_angle_correction.py  thickness_normalization.py  transmission.py  wavelength.py
scripts/: analysis-update-user.sh  analysis-update.sh  biosans_autowedge_reduction.json  biosans_input.json  biosans_reduction-v2.py  biosans_reduction.json  biosans_reduction.py  biosans_wedge_reduction.json  common_utils.py  conda-setup.sh  create_cg3_test_spice.py  create_wheel.sh  docker-test.py  drtsans_schema.py  eqsans-mount.sh  eqsans_reduction.json  eqsans_reduction.py  exec_script_on_docker.sh  fix_runner_perms.sh  generate_report  generate_report.yaml  gpsans_pixel_map_legacy.py  gpsans_prepare_sensitivities.py  gpsans_reduction-v2.py  gpsans_reduction.json  gpsans_reduction.py  gpsans_sensitivity_legacy.py  instruments-mount.sh  porsil.json  prepare_sensitivities.py  prepare_sensitivities_biosans.py  prepare_sensitivities_gpsans.py  process_reduction.py  publish_package.sh  pylint_job.sh  reduction.json  reduction_simplified.json  run-inputs.sh  sans-backend-run.sh  sans_reduction_test.py  (+3 more)
scripts/autoreduction/: reduce_EQSANS.py
scripts/examples/: plot_iq.py  plot_wavelength.py
scripts/jupyter_notebooks/: biosans_spice_prepare_sensitivities_template.py  biosans_spice_reduction_template.py  biosans_spice_to_nexus_template.py  gpsans_sensitivity_legacy.py  gpsans_spice_pixel_map_template.py  gpsans_spice_prepare_sensitivities_template.py  gpsans_spice_reduction_template.py  gpsans_spice_to_nexus.py  gpsans_spice_to_nexus_template.py
scripts/plot/: CG2_raw_2D.py  CG3_raw_2D.py  EQSANS_2D.py  EQSANS_raw_2D.py
scripts/spice/: cg2_spice_to_nexus.py  cg3_spice_to_nexus.py
scripts/test_help/: biosans_synthetic_sensitivity_dataset.py
src/drtsans/: __init__.py  absolute_units.py  api.py  auto_wedge.py  beam_finder.py  chopper.py  dark_current.py  dataobjects.py  detector.py  determine_bins.py  eventslice.py  filter_events.py  frame_mode.py  geometry.py  instruments.py  iq.py  load.py  mask_utils.py  (+24 more)
tests/: conftest.py  how_to_use_the_property_manager.py  test_beam_finder.py  test_beamcenter.py  test_eqsansload.py  test_fixtures.py
(+726 files in other folders)
