[metadata]
name = drtsans
description = Data Reduction Toolkit SANS reduction
# author = TODO
# keywords = TODO
long_description = file: README.rst, LICENSE
license = Apache License 2.0
url = https://drtsans.readthedocs.io/
project_urls =
    Source = https://code.ornl.gov/sns-hfir-scse/sans/sans-backend/
    Bug Tracker = https://code.ornl.gov/sns-hfir-scse/sans/sans-backend/-/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: Linux
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[build_sphinx]
source-dir = docs
warning-is-error = 1

[aliases]
test=pytest

[pytest]
addopts = --verbose -n 8
