[metadata]
name = drtsans
description = Data Reduction Toolkit SANS reduction
# author = TODO
# keywords = TODO
long_description = file: README.rst, LICENSE
license = Apache License 2.0
url = https://drtsans.readthedocs.io/
project_urls =
    Source = https://code.ornl.gov/sns-hfir-scse/sans/sans-backend/
    Bug Tracker = https://code.ornl.gov/sns-hfir-scse/sans/sans-backend/-/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Operating System :: Linux
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.8
scripts = scripts/biosans_reduction.py
	  scripts/common_utils.py
	  scripts/eqsans_reduction.py
	  scripts/gpsans_reduction.py
	  scripts/plot/CG2_raw_2D.py
	  scripts/plot/CG3_raw_2D.py
	  scripts/plot/EQSANS_2D.py
	  scripts/plot/EQSANS_raw_2D.py
	  scripts/prepare_sensitivities.py
	  scripts/process_reduction.py

[options.packages.find]
exclude =
    tests
    tests.*
    scripts/*.sh

[options.package_data]
drtsans = configuration/schema/*.json
          mono/biosans/cg3_to_nexus_mapping.yml

[build_sphinx]
source-dir = docs
warning-is-error = 1

[aliases]
test=pytest

[pytest]
addopts = --verbose -n 8
