[options]
include_package_data = True
zip_safe = False
packages = find:
scripts = scripts/biosans_reduction.py
	  scripts/common_utils.py
	  scripts/eqsans_reduction.py
	  scripts/gpsans_reduction.py
	  scripts/plot/CG2_raw_2D.py
	  scripts/plot/CG3_raw_2D.py
	  scripts/plot/EQSANS_2D.py
	  scripts/plot/EQSANS_raw_2D.py
	  scripts/prepare_sensitivities_biosans.py
	  scripts/prepare_sensitivities_gpsans.py
	  scripts/process_reduction.py

[options.packages.find]
exclude =
    tests
    tests.*
    scripts/*.sh

[options.package_data]
drtsans = configuration/schema/*.json
          mono/biosans/cg3_to_nexus_mapping.yml

[build_sphinx]
source-dir = docs
warning-is-error = 1

[aliases]
test=pytest

[pytest]
addopts = --verbose -n 8
